Made changes for Maps API Key.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,20 @@ local.properties
 # Eclipse project files
 .classpath
 .project
+
+# Android Studio
+.idea/
+build
+.gradle
+/*/local.properties
+/*/out
+/*/*/build
+/*/*/production
+*.iml
+*.iws
+*.ipr
+*~
+*.swp
+
+# Ignore MapKey file
+mapkeys.xml
